--- a/blocks/block-resources/assets/style.scss
+++ b/blocks/block-resources/assets/style.scss
@@ -1,9 +1,9 @@
 .se-block-resources {
-    @apply bg-white px-[24px] sm:px-[87px] py-[48px] sm:pt-[80px] sm:pb-[83px] flex flex-col justify-center items-center gap-[32px] sm:gap-[48px];
+    @apply bg-white px-[24px] sm:px-[48px] py-[48px] sm:pt-[80px] sm:pb-[83px] flex flex-col justify-center items-center gap-[32px] sm:gap-[48px];
 }
 
 .se-block-resources__header {
-    @apply flex w-full max-w-[414px] sm:max-w-[1266px] flex-row justify-between items-center;
+    @apply flex w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex-row justify-between items-center;
 }
 
 .se-block-resources__header-left {
@@ -38,11 +38,11 @@
 }
 
 .se-block-resources__content {
-    @apply flex w-full max-w-[414px] sm:max-w-[1266px] flex-col sm:flex-row items-start gap-[24px];
+    @apply flex w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex-col sm:flex sm:flex-col items-start gap-[24px] xl:flex xl:flex-row;
 }
 
 .se-block-resources__main {
-    @apply w-full sm:w-[836px] flex flex-col items-start gap-[16px] sm:gap-[32px];
+    @apply w-full sm:w-[672px] flex flex-col items-start gap-[16px] sm:gap-[32px] xl:w-[836px];
 }
 
 .se-block-resources__image-wrap {
@@ -91,7 +91,7 @@
 }
 
 .se-block-resources__main-image {
-    @apply w-full w-[366px] sm:w-[836px] h-[198.81px] sm:h-[420px] rounded-[6px];
+    @apply w-full max-sm:w-[366px] sm:w-[672px] sm:h-[365.04px] xl:w-[836px] h-[198.81px] xl:h-[420px] rounded-[6px];
 }
 
 .se-block-resources__main-meta {
@@ -119,11 +119,11 @@
 }
 
 .se-block-resources__side {
-    @apply flex flex-col w-full sm:w-[406px] gap-[32px];
+    @apply flex flex-col w-full sm:col-span-2 sm:w-[672px] sm:grid sm:grid-cols-[324px_324px] sm:gap-[24px] gap-[32px] xl:w-[406px] xl:flex xl:flex-col;
 }
 
 .se-block-resources__card {
-    @apply flex flex-col w-full sm:w-[406px] gap-[16px];
+    @apply flex flex-col w-full sm:w-[324px] gap-[16px] xl:w-[406px];
 }
 
 .se-block-resources__media {
@@ -141,7 +141,7 @@
 }
 
 .se-block-resources__card-image {
-    @apply w-full w-[366px] sm:w-[406px] h-[198.81px] rounded-[6px];
+    @apply w-full sm:w-[324px] sm:h-[176px] xl:w-[406px] h-[198.81px] rounded-[6px];
 }
 
 .se-block-resources__card-meta {
