--- a/blocks/hero/assets/style.scss
+++ b/blocks/hero/assets/style.scss
@@ -1,9 +1,9 @@
 .hero-block{
-    @apply flex items-center justify-center px-[24px] sm:px-[87px] flex flex-col pt-[80px];
+    @apply flex items-center justify-center px-[24px] sm:px-[48px] flex flex-col pt-[80px];
     @apply bg-cover bg-center bg-no-repeat bg-se-dark-navy;
 }
 .banner-container {
-    @apply w-full max-w-[414px] gap-[40px] xl:gap-[24px] sm:max-w-[1266px] mt-[19.23px] pt-[65.77px] pb-[87.72px] flex flex-col;
+    @apply w-full max-w-[414px] gap-[40px] xl:gap-[24px] sm:max-w-[768px] xl:max-w-[1266px] mt-[19.23px] pt-[65.77px] pb-[87.72px] flex flex-col;
 
     .banner-title {
         @apply text-[20px] font-[500] text-se-yellow flex justify-start items-center;
@@ -113,7 +113,7 @@
     }
 }
 .hero-container {
-  @apply w-full max-w-[414px] sm:max-w-[1266px] mt-[12.28px] pt-[32px];
+  @apply w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] mt-[12.28px] pt-[32px];
 
   .hero-inner {
     @apply py-[48px] sm:py-[80px] gap-[32px] grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4;
