--- a/blocks/marquee/assets/style.scss
+++ b/blocks/marquee/assets/style.scss
@@ -16,7 +16,7 @@
 }
 
 .se-marquee__header {
-    @apply relative z-10 w-full max-w-[414px] sm:max-w-[1266px] flex flex-row items-center sm:gap-[40px] mx-[24px] sm:mx-[87px];
+    @apply relative z-10 w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex flex-row items-center sm:gap-[40px] mx-[24px] sm:mx-[87px];
 }
 
 .se-marquee__divider {
