--- a/blocks/slider/assets/style.scss
+++ b/blocks/slider/assets/style.scss
@@ -1,5 +1,5 @@
 .se-slider {
-    @apply relative bg-very-dark-blue py-[48px] xl:pt-[160px] xl:pb-[150px] px-[24px] sm:px-[87px] flex flex-col gap-[70px] items-center cursor-pointer;
+    @apply relative bg-very-dark-blue py-[48px] xl:pt-[160px] xl:pb-[150px] px-[24px] sm:px-[48px] flex flex-col gap-[70px] items-center cursor-pointer;
 }
 
 .se-slider--mobile {
@@ -14,28 +14,16 @@
     @apply hidden xl:flex xl:flex-col xl:gap-[75px];
 }
 
-.se-slider--tablet {
-    @apply items-start;
-}
-
 .se-slider__overlay {
     @apply absolute inset-0 bg-black/20 pointer-events-none;
 }
 
 .se-slider__header {
-    @apply relative z-10 flex w-full max-w-[414px] xl:max-w-[1266px] flex-row xl:gap-[40px] items-center;
-}
-
-.se-slider--tablet .se-slider__header {
-    @apply max-w-none;
+    @apply relative z-10 flex w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex-row xl:gap-[40px] items-center;
 }
 
 .se-slider__header-divider {
-    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[32px] xl:-ml-[73px];
-}
-
-.se-slider--tablet .se-slider__header-divider {
-    @apply ml-0;
+    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[32px] sm:-ml-[73px];
 }
 
 .se-slider__header-title {
@@ -63,11 +51,7 @@
 }
 
 .se-slider__slides {
-    @apply relative z-10 w-full max-w-[414px] xl:max-w-[1266px] flex flex-col gap-[48px] xl:grid xl:gap-0;
-}
-
-.se-slider--tablet .se-slider__slides {
-    @apply max-w-none;
+    @apply relative z-10 w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex flex-col gap-[48px] sm:gap-[24px] xl:grid xl:gap-0;
 }
 
 .se-slider__slide {
@@ -79,7 +63,7 @@
 }
 
 .se-slider__text-col {
-    @apply xl:w-[406px] flex-shrink-0;
+    @apply sm:w-[322px] xl:w-[406px] flex-shrink-0;
 }
 
 .se-slider__text {
@@ -128,15 +112,15 @@
 }
 
 .se-slider--tablet .se-slider__slides {
-    @apply flex flex-col gap-[48px] overflow-visible;
+    @apply flex flex-col items-start gap-[48px] overflow-visible;
 }
 
 .se-slider--tablet .se-slider__slide {
-    @apply flex-row items-center gap-[64px] overflow-visible;
+    @apply flex-row items-center gap-[26px] overflow-visible;
 }
 
 .se-slider--tablet .se-slider__text-col {
-    @apply w-[520px] flex-shrink-0;
+    @apply w-[322px] flex-shrink-0;
 }
 
 .se-slider--tablet .se-slider__image-wrap {
