--- a/fe/src/styles/layout/footer.scss
+++ b/fe/src/styles/layout/footer.scss
@@ -1,8 +1,8 @@
  .site-footer {
- 	@apply sm:fixed sm:bottom-0 sm:left-0 sm:right-0 sm:w-screen sm:max-w-none z-0 bg-se-dark-navy py-[48px] px-[24px] sm:pt-[120px] sm:pl-[87px] sm:pr-[120px] sm:pb-[32px] flex flex-col justify-start sm:justify-center items-center gap-[44px] sm:gap-[120px];
+ 	@apply sm:fixed sm:bottom-0 sm:left-0 sm:right-0 sm:w-screen sm:max-w-none z-0 bg-se-dark-navy py-[48px] px-[24px] sm:px-[48px] sm:py-[62px] xl:pt-[120px] xl:pl-[87px] xl:pr-[120px] xl:pb-[32px] flex flex-col justify-start sm:justify-center items-center gap-[44px] xl:gap-[120px];
  
  	.footer-content {
- 		@apply w-full max-w-[414px] sm:max-w-[1266px] flex flex-col max-sm:justify-start sm:flex-row items-start gap-[44px] sm:justify-between;
+ 		@apply w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex flex-col max-sm:justify-start xl:flex-row items-start gap-[44px] sm:gap-[56px] xl:justify-between;
  	}
  
  	.footer-logo {
@@ -38,11 +38,11 @@
  	}
  
  	.footer-bottom {
-		@apply w-full max-w-[1266px] flex flex-col gap-[8px] max-sm:flex-col-reverse sm:flex-row sm:items-center sm:gap-[53px];
+		@apply w-full sm:max-w-[768px] xl:max-w-[1266px] flex flex-col gap-[8px] max-sm:flex-col-reverse sm:flex-col sm:items-start sm:gap-[16px] xl:flex-row xl:items-center xl:gap-[53px];
 	}
 
 	.footer-bottom-left {
-		@apply flex flex-col gap-[8px] max-sm:flex-row max-sm:flex-wrap max-sm:gap-[8px] sm:flex-row sm:gap-[16px];
+		@apply flex flex-col gap-[8px] max-sm:flex-row max-sm:flex-wrap max-sm:gap-[8px] sm:flex-row sm:gap-[16px] sm:order-2 xl:order-none;
 
 		.footer-bottom-text:nth-child(1) {
 			@apply max-sm:basis-full max-sm:grow-0 max-sm:shrink-0;
@@ -55,7 +55,7 @@
 	}
  
  	.footer-bottom-right {
- 		@apply flex flex-row gap-[16px];
+ 		@apply flex flex-row gap-[16px] sm:order-1 xl:order-none;
  	}
  
  	.footer-bottom-text {
@@ -67,7 +67,7 @@
  	}
  
  	.get-started-button {
- 		@apply relative overflow-hidden w-[158px] h-[48px] rounded-[4px] hidden sm:flex flex-row gap-[16px] justify-end items-center px-[24px] py-[14px] pr-[4px] bg-se-yellow;
+ 		@apply relative overflow-hidden w-[158px] h-[48px] rounded-[4px] hidden xl:flex flex-row gap-[16px] justify-end items-center px-[24px] py-[14px] pr-[4px] bg-se-yellow;
  
  		.text-container {
  			@apply relative h-[48px] overflow-hidden flex items-center;
@@ -135,7 +135,7 @@
  	}
 
 	.get-started-button-mobile {
- 		@apply relative overflow-hidden w-[158px] h-[48px] rounded-[4px] sm:hidden flex flex-row gap-[16px] justify-end items-center px-[24px] py-[14px] pr-[4px] bg-se-yellow;
+ 		@apply relative overflow-hidden w-[158px] h-[48px] rounded-[4px] xl:hidden flex flex-row gap-[16px] justify-end items-center px-[24px] py-[14px] pr-[4px] bg-se-yellow;
  
  		.text-container {
  			@apply relative h-[48px] overflow-hidden flex items-center;
