--- a/fe/src/styles/layout/header.scss
+++ b/fe/src/styles/layout/header.scss
@@ -26,7 +26,7 @@
 }
 
 .site-header {
-    @apply absolute left-0 top-0 w-full z-50 px-[24px] py-[18px] xl:py-[18px] xl:px-[48px] sm:py-[16px] sm:px-[87px] flex items-center justify-center bg-transparent;
+    @apply absolute left-0 top-0 w-full z-50 px-[24px] py-[18px] xl:py-[18px] xl:px-[48px] sm:py-[16px] sm:px-[48px] flex items-center justify-center bg-transparent;
 }
 
 .site-header.has-popover-open {
@@ -42,7 +42,7 @@ body.no-scroll {
 }
 
 .header {
-    @apply flex justify-between items-center w-full sm:gap-[81.16px] max-w-[414px] sm:max-w-[1266px];
+    @apply flex justify-between items-center w-full sm:gap-[81.16px] max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px];
 
     .logo {
         @apply w-[174.68px] h-[36px] flex-shrink-0;
