--- a/blocks/blog-banner/assets/style.scss
+++ b/blocks/blog-banner/assets/style.scss
@@ -5,7 +5,7 @@
      background-repeat: no-repeat;
  
      .blog-banner__inner {
-         @apply w-full max-w-[414px] sm:max-w-[1266px] rounded-[6px] py-[38px] sm:py-[40px] px-[24px] sm:px-[43px];
+         @apply w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] rounded-[6px] py-[38px] sm:py-[40px] px-[24px] sm:px-[43px];
      }
  
      .blog-banner__content {
@@ -13,7 +13,7 @@
      }
  
      .blog-banner__text {
-         @apply flex flex-col w-full max-w-[470px] gap-[8px];
+         @apply flex flex-col w-full max-w-[470px] xl:max-w-[470px] sm:w-[310px] gap-[8px];
      }
  
      .blog-banner__eyebrow {
