--- a/fe/src/styles/layout/header.scss
+++ b/fe/src/styles/layout/header.scss
@@ -202,10 +202,10 @@ body.no-scroll {
 }
 
 .dropdown-container {
-    @apply max-w-[414px] flex flex-col py-[32px] px-[24px] max-sm:gap-[24px] sm:max-w-[1340px] bg-se-dark-navy sm:pt-[24px] sm:pb-[48px] sm:px-[42px] sm:rounded-bl-[4px] sm:rounded-br-[4px] sm:grid sm:grid-cols-[406px_1fr];
+    @apply max-w-[414px] sm:max-w-[768px] flex flex-col py-[32px] px-[24px] sm:px-[48px] max-xl:gap-[24px] xl:max-w-[1340px] bg-se-dark-navy xl:pt-[24px] xl:pb-[48px] xl:px-[42px] xl:rounded-bl-[4px] xl:rounded-br-[4px] xl:grid xl:grid-cols-[406px_1fr];
 
     .dropdown-section-1 {
-        @apply max-sm:px-[16px] max-sm:py-[24px] max-sm:gap-[16px] max-sm:justify-start sm:h-[553px] bg-deep-blue sm:pt-[24px] sm:pr-[75px] sm:pb-[32px] sm:pl-[32px] rounded-[6px] flex flex-col justify-between row-span-2;
+        @apply max-xl:px-[16px] max-xl:py-[24px] max-sm:gap-[16px] max-sm:justify-start sm:h-[304px] xl:h-[553px] bg-deep-blue xl:pt-[24px] xl:pr-[75px] xl:pb-[32px] xl:pl-[32px] rounded-[6px] flex flex-col sm:flex-row justify-between max-sm:items-start max-xl:items-end row-span-2;
 
         .section-1-content {
             @apply w-full max-sm:gap-[24px] sm:gap-[16px] flex flex-col;
@@ -241,7 +241,7 @@ body.no-scroll {
     }
 
     .dropdown-section-2 {
-        @apply max-sm:px-[16px] max-sm:py-[24px] max-sm:w-full max-sm:h-auto max-sm:ml-0 sm:w-[836px] sm:h-[397px] sm:pt-[24px] sm:pr-[75px] sm:pb-[40px] sm:pl-[32px] sm:gap-[40px] rounded-[6px] bg-mid-blue sm:ml-[24px];
+        @apply max-xl:px-[16px] max-xl:py-[24px] max-xl:w-full max-xl:h-auto max-xl:ml-0 xl:w-[836px] xl:h-[397px] xl:pt-[24px] xl:pr-[75px] xl:pb-[40px] xl:pl-[32px] xl:gap-[40px] rounded-[6px] bg-mid-blue xl:ml-[24px];
 
         .section-2-inner {
             @apply flex flex-col max-sm:gap-[24px] sm:gap-[16px];
@@ -277,7 +277,7 @@ body.no-scroll {
     }
 
     .dropdown-section-3 {
-        @apply max-sm:w-full max-sm:mt-0 max-sm:ml-0 sm:w-[747px] flex flex-col sm:gap-[16px] sm:mt-[32px] sm:ml-[54px];
+        @apply max-xl:w-full max-xl:mt-0 max-xl:ml-0 xl:w-[747px] flex flex-col xl:gap-[16px] xl:mt-[32px] xl:ml-[54px];
 
         h6 {
             @apply text-[20px] font-[500];
@@ -332,7 +332,7 @@ body.no-scroll {
 }
 
 .popover-mobile-back {
-    @apply flex flex-row items-center gap-[8px] sm:hidden;
+    @apply flex flex-row items-center gap-[8px] xl:hidden;
 }
 
 .popover-mobile-back__icon {
@@ -344,14 +344,14 @@ body.no-scroll {
 }
 
 .dropdown-simple {
-    @apply w-full max-w-[414px] box-border flex flex-col py-[32px] px-[24px] max-sm:gap-[16px] sm:max-w-[1340px] bg-se-dark-navy sm:pt-[24px] sm:pb-[48px] sm:px-[42px] sm:rounded-bl-[4px] sm:rounded-br-[4px] sm:grid sm:grid-cols-[833px_1fr] sm:gap-[25px];
+    @apply w-full max-w-[414px] sm:max-w-[768px] box-border flex flex-col py-[32px] px-[24px] sm:px-[48px] max-xl:gap-[16px] xl:max-w-[1340px] bg-se-dark-navy xl:pt-[24px] xl:pb-[48px] xl:px-[42px] xl:rounded-bl-[4px] xl:rounded-br-[4px] xl:grid xl:grid-cols-[833px_1fr] xl:gap-[25px];
 
     .dropdown-simple__main {
-        @apply max-sm:w-full max-sm:h-auto sm:w-[833px] rounded-[6px] max-sm:py-[24px] max-sm:px-[16px] sm:pt-[24px] sm:pr-[75px] sm:pb-[40px] sm:pl-[32px] bg-deep-blue flex flex-col gap-[16px];
+        @apply max-xl:w-full max-xl:h-auto xl:w-[833px] rounded-[6px] max-xl:py-[24px] max-xl:px-[16px] xl:pt-[24px] xl:pr-[75px] xl:pb-[40px] xl:pl-[32px] bg-deep-blue flex flex-col gap-[16px];
     }
 
     .dropdown-simple__header {
-        @apply hidden sm:flex flex-col;
+        @apply hidden xl:flex flex-col;
     }
 
     .dropdown-simple__title {
@@ -359,7 +359,7 @@ body.no-scroll {
     }
 
     .dropdown-simple__content {
-        @apply max-sm:flex-col-reverse max-sm:gap-[32px] flex flex-row sm:gap-[99px];
+        @apply max-sm:flex-col-reverse max-xl:flex-row-reverse max-sm:gap-[32px] flex flex-row sm:gap-[99px];
     }
 
     .dropdown-simple__media {
@@ -409,7 +409,7 @@ body.no-scroll {
     }
 
     .dropdown-simple__side {
-        @apply max-sm:w-full max-sm:box-border max-sm:h-auto max-sm:py-[24px] max-sm:gap-[24px] max-sm:px-[16px] sm:h-[342px] rounded-[6px] flex flex-col max-sm:justify-start sm:justify-between sm:pt-[24px] sm:pr-[75px] sm:pb-[32px] sm:pl-[32px] bg-mid-blue;
+        @apply max-sm:w-full max-xl:w-[324px] max-xl:box-border max-xl:h-auto max-xl:py-[24px] max-xl:gap-[24px] max-xl:px-[16px] xl:h-[342px] rounded-[6px] flex flex-col max-xl:justify-start xl:justify-between xl:pt-[24px] xl:pr-[75px] xl:pb-[32px] xl:pl-[32px] bg-mid-blue;
     }
 
     .dropdown-simple__side-content {
@@ -434,11 +434,11 @@ body.no-scroll {
 }
 
 .dropdown-modern {
-    @apply w-full max-w-[414px] box-border flex flex-col py-[32px] px-[24px] max-sm:gap-[16px] sm:max-w-[1340px] bg-se-dark-navy sm:pt-[24px] sm:pb-[48px] sm:px-[42px] sm:rounded-bl-[4px] sm:rounded-br-[4px] sm:grid sm:grid-cols-[833px_1fr] sm:gap-[25px];
+    @apply w-full max-w-[414px] sm:max-w-[768px] box-border flex flex-col py-[32px] px-[24px] sm:px-[48px] max-xl:gap-[16px] xl:max-w-[1340px] bg-se-dark-navy xl:pt-[24px] xl:pb-[48px] xl:px-[42px] xl:rounded-bl-[4px] xl:rounded-br-[4px] xl:grid sm:grid-cols-[833px_1fr] xl:gap-[25px];
 
     /* Main panel (left) */
     .dropdown-modern__main {
-        @apply max-sm:w-full max-sm:h-auto sm:w-[833px] sm:h-[438px] bg-deep-blue rounded-[6px] max-sm:py-[24px] max-sm:px-[16px] sm:pt-[24px] sm:pr-[75px] sm:pb-[40px] sm:pl-[32px];
+        @apply max-xl:w-full max-xl:h-auto xl:w-[833px] xl:h-[438px] bg-deep-blue rounded-[6px] max-xl:py-[24px] max-xl:px-[16px] xl:pt-[24px] xl:pr-[75px] xl:pb-[40px] xl:pl-[32px];
     }
 
     .dropdown-modern__main-inner {
@@ -446,11 +446,11 @@ body.no-scroll {
     }
 
     .dropdown-modern__title {
-        @apply text-[20px] font-[500];
+        @apply hidden xl:flex text-[20px] font-[500];
     }
 
     .dropdown-modern__content {
-        @apply max-sm:flex-col-reverse max-sm:gap-[24px] flex flex-row sm:gap-[99px];
+        @apply max-sm:flex-col-reverse max-xl:flex-row-reverse max-xl:gap-[24px] flex flex-row xl:gap-[99px];
     }
 
     .dropdown-modern__media-stack {
@@ -538,7 +538,7 @@ body.no-scroll {
 
     /* List column */
     .dropdown-modern__list {
-        @apply flex flex-col gap-[24px] sm:gap-[8px];
+        @apply flex flex-col gap-[24px] xl:gap-[8px];
     }
 
     .dropdown-modern__list-item {
@@ -567,7 +567,11 @@ body.no-scroll {
     }
 
     .dropdown-modern__side-list {
-        @apply flex flex-col max-sm:gap-[24px] sm:gap-[8px];
+        @apply flex flex-col max-sm:gap-[24px] sm:gap-[8px] sm:flex-row sm:gap-[40px] xl:flex-col xl:gap-[8px];
+    }
+
+    .dropdown-modern__side-column {
+        @apply flex flex-col max-sm:gap-[24px] sm:gap-[8px] sm:w-[299px] xl:w-full;
     }
 
     .dropdown-modern__side-item {
@@ -584,15 +588,19 @@ body.no-scroll {
 }
 
 .dropdown-classic {
-    @apply max-w-[414px] flex flex-col py-[32px] px-[24px] max-sm:gap-[24px] sm:max-w-[1340px] bg-se-dark-navy sm:pt-[24px] sm:pb-[48px] sm:px-[42px] sm:rounded-bl-[4px] sm:rounded-br-[4px] sm:grid sm:grid-cols-3 sm:gap-[23px];
+    @apply max-w-[414px] flex flex-col py-[32px] px-[24px] max-sm:gap-[24px] sm:max-w-[768px] sm:px-[48px] max-xl:gap-[24px] xl:max-w-[1340px] bg-se-dark-navy xl:pt-[24px] xl:pb-[48px] xl:px-[42px] xl:rounded-bl-[4px] xl:rounded-br-[4px] xl:grid xl:grid-cols-3 xl:gap-[23px] sm:flex sm:flex-col max-sm:flex max-sm:flex-col;
+
+    .dropdown-classic__cards-container {
+        @apply max-sm:flex max-sm:flex-col sm:grid sm:grid-cols-2 sm:gap-[23px] xl:hidden;
+    }
 
     /* Intro (left) */
     .dropdown-classic__col--intro {
-        @apply max-sm:w-full sm:w-[328px] rounded-[6px] sm:pt-[24px] sm:pr-[75px] sm:pb-[32px] sm:pl-[32px];
+        @apply max-xl:w-full xl:w-[328px] rounded-[6px] xl:pt-[24px] xl:pr-[75px] xl:pb-[32px] xl:pl-[32px];
     }
 
     .dropdown-classic__intro {
-        @apply flex flex-col gap-[32px] max-sm:px-[16px];
+        @apply flex flex-col gap-[32px] max-xl:px-[16px];
     }
 
     .dropdown-classic__intro-content {
@@ -600,11 +608,11 @@ body.no-scroll {
     }
 
     .dropdown-classic__intro-title {
-        @apply hidden sm:block text-[20px] font-[500];
+        @apply hidden xl:block text-[20px] font-[500];
     }
 
     .dropdown-classic__intro-text {
-        @apply text-[14px] font-[400] max-sm:w-full max-sm:h-auto sm:w-[297px] sm:h-[84px];
+        @apply text-[14px] font-[400] max-xl:w-full max-xl:h-auto xl:w-[297px] xl:h-[84px];
     }
 
     .dropdown-classic__cta {
@@ -631,7 +639,7 @@ body.no-scroll {
 
     /* Cards (middle/right) */
     .dropdown-classic__col--card {
-        @apply max-sm:w-full max-sm:h-auto sm:h-[323px] rounded-[6px] max-sm:px-[16px] max-sm:py-[24px] sm:pt-[24px] sm:pr-[75px] sm:pb-[32px] sm:pl-[32px] flex flex-col gap-[24px] sm:gap-[40px];
+        @apply max-xl:w-full max-xl:h-auto xl:h-[323px] rounded-[6px] max-xl:px-[16px] max-xl:py-[24px] xl:pt-[24px] xl:pr-[75px] xl:pb-[32px] xl:pl-[32px] flex flex-col gap-[24px] xl:gap-[40px];
     }
 
     .dropdown-classic__col--card-1 {
@@ -643,7 +651,7 @@ body.no-scroll {
     }
 
     .dropdown-classic__card-header {
-        @apply max-sm:w-full max-sm:box-border flex flex-col p-[8px] rounded-[4px] max-sm:gap-[8px] sm:gap-[16px] cursor-default;
+        @apply max-xl:w-full max-xl:box-border flex flex-col p-[8px] rounded-[4px] max-xl:gap-[8px] xl:gap-[16px] cursor-default;
     }
 
     .dropdown-classic__card-header:hover {
@@ -659,7 +667,7 @@ body.no-scroll {
     }
 
     .dropdown-classic__card-image {
-        @apply max-sm:w-full max-sm:h-auto sm:w-[299px] sm:h-[162px] rounded-[6px] object-cover;
+        @apply max-xl:w-full max-xl:h-auto xl:w-[299px] xl:h-[162px] rounded-[6px] object-cover;
     }
 }
 
@@ -693,11 +701,11 @@ body.no-scroll {
 }
 
 .popover-mobile-menu {
-    @apply fixed left-0 right-0 bottom-0 top-[72px] z-50 flex justify-start w-full max-w-[414px] sm:max-w-[768px] box-border mx-auto xl:hidden;
+    @apply absolute left-0 top-full w-full z-50 flex justify-center xl:hidden;
 }
 
 .popover-mobile-menu__panel {
-    @apply w-full bg-se-dark-navy h-full box-border flex flex-col py-[32px] px-[24px] gap-[40px] overflow-y-auto;
+    @apply w-full bg-se-dark-navy h-full box-border flex flex-col py-[32px] px-[24px] sm:px-[48px] gap-[40px] overflow-y-auto;
 }
 
 .popover-mobile-menu__list {
@@ -717,11 +725,11 @@ body.no-scroll {
 }
 
 .popover-mobile-menu__footer {
-    @apply flex flex-row gap-[16px];
+    @apply flex sm:hidden flex-row gap-[16px];
 }
 
 .popover-mobile-menu__login-button {
-    @apply relative overflow-hidden border-[1px] border-se-yellow max-w-[175px] max-h-[48px] rounded-[4px] py-[15px] px-[70px];
+    @apply flex justify-center items-center overflow-hidden border-[1px] border-se-yellow h-[48px] rounded-[4px] py-[14px] px-[50px];
 
     p {
         @apply relative z-10 text-[14px] font-[500];
@@ -739,7 +747,7 @@ body.no-scroll {
 }
 
 .popover-mobile-menu__get-started-button {
-    @apply relative overflow-hidden max-w-[175px] max-h-[48px] rounded-[4px] flex flex-row gap-[16px] justify-end items-center py-[4px] pr-[4px] pl-[39px] bg-se-yellow;
+    @apply flex justify-center items-center relative overflow-hidden w-[175px] h-[48px] rounded-[4px] flex flex-row gap-[16px] justify-end items-center py-[4px] pr-[4px] pl-[39px] bg-se-yellow;
 
     .text-container {
         @apply relative max-h-[48px] overflow-hidden flex items-center;
