--- a/blocks/slider/assets/style.scss
+++ b/blocks/slider/assets/style.scss
@@ -19,7 +19,7 @@
 }
 
 .se-slider__header {
-    @apply relative z-10 flex w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex-row xl:gap-[40px] items-center;
+    @apply relative z-10 flex w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex-row sm:gap-[40px] items-center;
 }
 
 .se-slider__header-divider {
