--- a/fe/src/styles/layout/footer.scss
+++ b/fe/src/styles/layout/footer.scss
@@ -1,5 +1,5 @@
  .site-footer {
- 	@apply sm:fixed sm:bottom-0 sm:left-0 sm:right-0 sm:w-screen sm:max-w-none z-0 bg-se-dark-navy py-[48px] px-[24px] sm:px-[48px] sm:py-[62px] xl:pt-[120px] xl:pl-[87px] xl:pr-[120px] xl:pb-[32px] flex flex-col justify-start sm:justify-center items-center gap-[44px] xl:gap-[120px];
+ 	@apply xl:fixed xl:bottom-0 xl:left-0 xl:right-0 xl:w-screen xl:max-w-none z-0 bg-se-dark-navy py-[48px] px-[24px] sm:px-[48px] sm:py-[62px] xl:pt-[120px] xl:pl-[87px] xl:pr-[120px] xl:pb-[32px] flex flex-col justify-start sm:justify-center items-center gap-[44px] xl:gap-[120px];
  
  	.footer-content {
  		@apply w-full max-w-[414px] sm:max-w-[768px] xl:max-w-[1266px] flex flex-col max-sm:justify-start xl:flex-row items-start gap-[44px] sm:gap-[56px] xl:justify-between;
